[package]
name = "contextual-capture"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
glyphon = "0.9.0"
libc = "0.2.172"
pollster = "0.4.0"
thiserror = "2.0.12"
wgpu = "25.0.0"
# winit = "0.30.9"
winit = { git = "https://github.com/rust-windowing/winit.git" }

[target.'cfg(target_os = "macos")'.dependencies.objc2]
git = "https://github.com/madsmtm/objc2.git"

[target.'cfg(target_os = "macos")'.dependencies.objc2-core-foundation]
git = "https://github.com/madsmtm/objc2.git"

[target.'cfg(target_os = "macos")'.dependencies.objc2-app-kit]
git = "https://github.com/madsmtm/objc2.git"
# default-features = false
# features = [
#     "NSApplication",
#     "NSResponder",
# ]

[target.'cfg(target_os = "macos")'.dependencies.objc2-foundation]
git = "https://github.com/madsmtm/objc2.git"
# default-features = false
# features = [
#     "NSString",
# ]

[target.'cfg(target_os = "macos")'.dependencies.objc2-application-services]
git = "https://github.com/madsmtm/objc2.git"
